--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,12 @@
-# Use Node 16 (Angular 15 compatible)
-FROM node:16-bullseye-slim AS builder
+FROM node:18-alpine AS builder
 WORKDIR /app
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential python3 ca-certificates && \
-    rm -rf /var/lib/apt/lists/*
-
 COPY package*.json ./
-RUN npm ci
-
+RUN npm install
 COPY . .
+RUN npm run build --prod
 
-ENV NODE_OPTIONS=--max_old_space_size=4096
-
-RUN npm run build -- --configuration=production
-
-# Serve using NGINX
 FROM nginx:alpine
-
-COPY --from=builder /app/dist/angular-15-crud/ /usr/share/nginx/html/
+COPY --from=builder /app/dist/angular-15-crud /usr/share/nginx/html
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
