--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -20,5 +20,6 @@ RUN npm run build -- --output-path=dist/angular-15-crud --configuration=producti
 FROM nginx:stable-bullseye
 RUN rm -rf /usr/share/nginx/html/*
 COPY --from=build /app/dist/angular-15-crud/ /usr/share/nginx/html/
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
