--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -12,8 +12,9 @@ services:
       - backend
     restart: unless-stopped
     networks:
-      - intern
-
+      intern:
+        driver: bridge
+        
   backend:
     build:
       context: ./backend
@@ -31,7 +32,8 @@ services:
       - mongo
     restart: unless-stopped
     networks:
-      - intern
+      intern:
+        driver: bridge
       
 
   mongo:
@@ -48,7 +50,8 @@ services:
       - "27017:27017"
     restart: unless-stopped
     networks:
-      - intern
+      intern:
+        driver: bridge
       
     healthcheck:
       test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
