--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -1,5 +1,4 @@
-version: "3.8"
-
+# (version line removed — modern docker compose ignores it)
 services:
   frontend:
     build:
@@ -7,14 +6,13 @@ services:
     image: frontend:1.1
     container_name: frontend
     ports:
-      - "8081:80"            # host:container
+      - "8081:80"
     depends_on:
       - backend
     restart: unless-stopped
     networks:
-      intern:
-        driver: bridge
-        
+      - intern
+
   backend:
     build:
       context: ./backend
@@ -26,33 +24,23 @@ services:
       - NODE_ENV=production
       - PORT=8080
       - MONGO_URI=mongodb://mongo:27017/dd_db
-      # If you prefer to enable Mongo auth, uncomment & configure:
-      # - MONGO_URI=mongodb://mongouser:mypassword@mongo:27017/dd_db?authSource=admin
+      # To enable Mongo auth, adjust MONGO_URI and set mongo env vars accordingly.
     depends_on:
       - mongo
     restart: unless-stopped
     networks:
-      intern:
-        driver: bridge
-      
+      - intern
 
   mongo:
     image: mongo:6
     container_name: mongo
-    # If you want to enable authentication, uncomment the next two lines and
-    # create the users via init scripts or MONGO_INITDB_ROOT_USERNAME/ROOT_PASSWORD.
-    # environment:
-    #   - MONGO_INITDB_ROOT_USERNAME=mongouser
-    #   - MONGO_INITDB_ROOT_PASSWORD=mypassword
     volumes:
       - mongo_data:/data/db
     ports:
       - "27017:27017"
     restart: unless-stopped
     networks:
-      intern:
-        driver: bridge
-      
+      - intern
     healthcheck:
       test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
       interval: 10s
@@ -62,13 +50,8 @@ services:
 
 volumes:
   mongo_data:
-    # Use default local driver. To map to host path change to:
-    # driver_opts:
-    #   o: bind
-    #   device: /path/on/host/mongo_data
-    #   type: none
 
 networks:
-  dd-net:
+  intern:
     external: true
     name: intern
