--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-# (version line removed — modern docker compose ignores it)
-name: Intern-project
 services:
   frontend:
     build:
@@ -17,7 +15,7 @@ services:
   backend:
     build:
       context: ./backend
-    image: lingannaj/backend:v1.0
+    image: lingannaj/backend:1.0
     container_name: backend
     ports:
       - "8080:8080"
@@ -25,7 +23,6 @@ services:
       - NODE_ENV=production
       - PORT=8080
       - MONGO_URI=mongodb://mongo:27017/dd_db
-      # To enable Mongo auth, adjust MONGO_URI and set mongo env vars accordingly.
     depends_on:
       - mongo
     restart: unless-stopped
@@ -33,7 +30,7 @@ services:
       - intern
 
   mongo:
-    image: lingannaj/mongo:v1.0
+    image: lingannaj/mongo:6
     container_name: mongo
     volumes:
       - mongo_data:/data/db
@@ -53,5 +50,6 @@ volumes:
   mongo_data:
 
 networks:
-  default:
+  intern:
+    external: true
     name: intern
